syntax = "proto3";

package tracer_study_grpc;
option go_package = "./;pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Provinsi {
    string id_wil = 1;
    string nama = 2;
    string ump12 = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
    google.protobuf.Timestamp deleted_at = 6;
}

message GetAllProvinsiResponse {
    uint32 code = 1;
    string message = 2;
    repeated Provinsi data = 3;
}

message GetProvinsiByIdWilRequest {
    string id_wil = 1;
}

message GetProvinsiResponse {
    uint32 code = 1;
    string message = 2;
    Provinsi data = 3;
}

message DeleteProvinsiResponse {
    uint32 code = 1;
    string message = 2;
}

service ProvinsiService {
    rpc GetAllProvinsi(google.protobuf.Empty) returns (GetAllProvinsiResponse) {};
    rpc GetProvinsiByIdWil(GetProvinsiByIdWilRequest) returns (GetProvinsiResponse) {};
    rpc CreateProvinsi(Provinsi) returns (GetProvinsiResponse) {};
    rpc UpdateProvinsi(Provinsi) returns (GetProvinsiResponse) {};
    rpc DeleteProvinsi(GetProvinsiByIdWilRequest) returns (DeleteProvinsiResponse) {};
}